# astrofind

./: .gitattributes  .gitignore  AUDIT_FIND.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  LICENSE  NOTICE  README.md  SECURITY.md  TODO.md  astrofind.desktop  runner-config.yml
.forgejo/workflows/: release.yml
.gitea/workflows/: release.yml
.github/workflows/: audit.yml  build.yml  qa-arch.yml  qa-debian-12.yml  qa-manjaro.yml  qa-mint-22.yml  qa-opensuse-tw.yml  qa-pop-os-22.yml  qa-rocky-9.yml  qa-ubuntu-24.yml  qa-wsl2.yml  qa-zorin-17.yml
cmake/: audit.cmake  dependencies.cmake  valgrind.supp
cmake/patches/: sep-leak-fix.patch
docs/: qa-distros.md  technical-reference.md
i18n/: astrofind_en.qm  astrofind_en.ts  astrofind_pt_BR.qm  astrofind_pt_BR.ts
packaging/: install.sh
packaging/arch/: PKGBUILD
packaging/debian/: changelog  control  control-binary  copyright  rules
packaging/rpm/: astrofind-binary.spec  astrofind.spec
resources/: resources.qrc
resources/help/: help_en.html  help_pt_br.html
scripts/: pre-commit
src/: CMakeLists.txt  main.cpp
src/core/: AdesReport.cpp  AdesReport.h  ApiKeyStore.cpp  ApiKeyStore.h  AstapSolver.cpp  AstapSolver.h  AstrometryClient.cpp  AstrometryClient.h  Astronomy.cpp  Astronomy.h  CMakeLists.txt  Calibration.cpp  Calibration.h  CatalogClient.cpp  CatalogClient.h  Centroid.cpp  Centroid.h  Ephemeris.cpp  Ephemeris.h  ExportImage.cpp  ExportImage.h  FitsImage.cpp  FitsImage.h  FitsTableReader.cpp  FitsTableReader.h  GusProject.cpp  GusProject.h  HorizonsClient.cpp  HorizonsClient.h  ImageLoader.cpp  ImageLoader.h  ImageSession.cpp  ImageSession.h  ImageStacker.cpp  ImageStacker.h  KooEngine.cpp  KooEngine.h  Measurement.h  MovingObjectDetector.cpp  MovingObjectDetector.h  (+14 more)
src/ui/: AboutDialog.cpp  AboutDialog.h  AppIcons.cpp  AppIcons.h  BackgroundRangeDialog.cpp  BackgroundRangeDialog.h  BlinkWidget.cpp  BlinkWidget.h  CMakeLists.txt  CalibrationPanel.cpp  CalibrationPanel.h  CalibrationWizard.cpp  CalibrationWizard.h  DockTitleBar.cpp  DockTitleBar.h  EditImageParametersDialog.cpp  EditImageParametersDialog.h  FitsImageView.cpp  FitsImageView.h  FitsSubWindow.cpp  FitsSubWindow.h  GrowthCurveDialog.cpp  GrowthCurveDialog.h  HelpDialog.cpp  HelpDialog.h  HistogramDialog.cpp  HistogramDialog.h  HorizonsQueryDialog.cpp  HorizonsQueryDialog.h  ImageCatalogTable.cpp  ImageCatalogTable.h  LightCurveDialog.cpp  LightCurveDialog.h  LogPanel.cpp  LogPanel.h  MainWindow.cpp  MainWindow.h  MainWindow_io.cpp  MainWindow_measurement.cpp  MainWindow_p.h  (+34 more)
tests/: CMakeLists.txt  synthetic_fits.h  test_ades_report.cpp  test_astronomy.cpp  test_calibration.cpp  test_calibration_panel.cpp  test_centroid.cpp  test_fits_functional.cpp  test_fits_loader.cpp  test_fits_loaders.cpp  test_image_session.cpp  test_image_stacker.cpp  test_moving_object_detector.cpp  test_mpc_orb.cpp  test_photometry.cpp  test_robustness.cpp  test_session_signals.cpp  test_settings_dialog.cpp  test_star_detector.cpp  test_ui_main.cpp  test_url_scheme_guard.cpp  test_url_scheme_guard_ui.cpp
